gitops/apps/gateway/config/pihole/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: pihole
  namespace: pihole
spec:
  parentRefs:
    - name: homelab
      namespace: ingress
  hostnames:
    - pihole.local
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: pihole-web
          port: 80
